--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -118,14 +118,14 @@
   --secondary: #525355;
   --border: #0e0f11;
   --bg: #0e0f11;
-  --theme: #aff42b;
+  --theme: #1b5657;
 
   --black: #0e0f11;
   --black-2: #525355;
   --white: #ffffff;
   --white-2: #ffffff;
 
-  --action: #aff42b;
+  --action: #1b5657;
 }
 
 // Responsive Variable
