--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -111,9 +111,9 @@
 
 
     &.bg-active {
-      background-color: var(--action);
-      border-color: var(--action);
-      color: var(--black);
+      background-color: rgb(27, 86, 87);
+      border-color: rgb(27, 86, 87) ;
+      color: var(--white);
 
       &:hover {
         background-color: var(--primary);
@@ -566,7 +566,7 @@
   gap: 30px;
 
   &:hover {
-    color: var(--action);
+    color: var(--black);
   }
 }
 
